src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project
  labels:
    app: my-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-project
  template:
    metadata:
      labels:
        app: my-project
    spec:
      containers:
      - name: my-project
        image: 195041288846.dkr.ecr.us-east-1.amazonaws.com/my-project:latest
        ports:
        - containerPort: 80
