src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-phase-1-api-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tech-challenge-phase-1-api
